assets/css/style.scss
---
---



	html, body
	{
		height: 100%;
	}
	
	body
	{
		margin: 0px;
		padding: 0px;
		background: #{{ site.color.background.back }};
		font-family: 'Source Sans Pro', sans-serif;
		font-size: 12pt;
		font-weight: 300;
		color: #{{ site.color.text.main }};
	}
	
	
	h1, h2, h3
	{
		margin: 0;
		padding: 0;
		font-weight: 600;
		color: #333333;
	}
	
	p, ol, ul
	{
		margin-top: 0;
	}
	
	ol, ul
	{
		padding: 0;
		list-style: none;
	}
	
	p
	{
		line-height: 180%;
	}

  hr
  {
    color: rgba(0,0,0,0.08);
  }
		
	strong
	{
    font-weight: bold;
	}
	
	a
	{
		color: #{{ site.color.text.link }};
		text-decoration: none;
	}
	
	a:hover
	{
		text-decoration: underline;
		color: #{{ site.color.text.link }};
	}
	
	.container
	{
		overflow: hidden;
		margin: 0em auto;
		width: 1200px;
	}
	
/*********************************************************************************/
/* Image Style                                                                   */
/*********************************************************************************/

	.image
	{
		display: inline-block;
	}
	
	.image img
	{
		display: block;
		width: 100%;
	}
	
	.image-full
	{
		display: block;
		width: 100%;
		margin: 0 0 2em 0;
	}
	
	.image-left
	{
		float: left;
		margin: 0 2em 2em 0;
	}
	
	.image-centered
	{
		display: block;
		margin: 0 0 2em 0;
	}
	
	.image-centered img
	{
		margin: 0 0 0 30px;
		width: auto;
	}

/*********************************************************************************/
/* List Styles                                                                   */
/*********************************************************************************/

	ul.style1
	{
		margin: 0em 0em 0em 0em;
		padding: 0;
		width: 100%;
		overflow: hidden;
		list-style: none;
		text-align: justify;
		color: #6c6c6c
	}
	
	ul.style1 li
	{
		padding: 1.6em 0em 0em 0em;
		margin: 0 0 2.5em 0;
		border-top: 1px solid rgba(0,0,0,.1); 
	}
	
	ul.style1 li:first-child
	{
		border-top: none;
	}
	
	ul.style1 p
	{
		margin: 0;
	}
	
	ul.style1 a
	{
		/*display: block;*/
		text-decoration: none;
		/*color: #2D2D2D;*/
	}
	
	ul.style1 a:hover
	{
		text-decoration: underline;
	}
	
	ul.style1 h3
	{
		padding: 1em 0.5em 5px 0em;
		text-transform: uppercase;
		font-size: 1em;
		font-weight: 400;
	}
	
	ul.style1 .first
	{
		padding-top: 0;
		background: none;
	}
	
	ul.style1 .date
	{
		float: left;
		position: relative;
		width: 40px;
		height: 70px;
		margin: 0em 25px 0em 0em;
		padding: 1.5em 0em 1.5em 0em;
		padding-right: 25px;
		box-shadow: 0px 0px 0px 5px rgba(255,255,255,0.1);
		line-height: normal;
		text-align: center;
		text-transform: uppercase;
		text-shadow: 0px 1px 0px rgba(0,0,0,.2);
		font-size: 1em;
		font-weight: 400;
	}
	
	ul.style1 .illustration
	{
		float: right;
		position: relative;
		width: 192px;
		height: 128px;
		padding-top: 6px; 
		padding-left: 60px;
	}

  ul.style1 .news_text
  {
    margin-left: 65px;
    padding-left: 25px;
    min-height: 120px;
    border-left: 1px solid rgba(0,0,0,.1); 
  }
	
	ul.style1 .date:after
	{
		content: '';
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		border-radius: 6px;
	}
	
	ul.style1 .illustration:after
	{
		content: '';
		display: block;
		position: absolute;
		left: 0;
		top: 0;
		width: 100%;
		height: 100%;
		border-radius: 6px;
	}
	
	ul.style1 .date b
	{
		margin: 0;
		padding: 0;
		display: block;
		margin-top: -5px;
		font-size: 1.8em;
		font-weight: 700;
	}
	
	ul.style1 .illustration b
	{
		margin: 0;
		padding: 0;
		display: block;
		margin-top: -5px;
		font-size: 1.8em;
		font-weight: 700;
	}
	
	ul.style1 .date a
	{
	}
	
	ul.style1 .illustration a
	{
	}
	
	ul.style1 .date a:hover
	{
		text-decoration: none;
	}
	
	ul.style1 .illustration a:hover
	{
		text-decoration: none;
	}


/*********************************************************************************/
/* Social Icon Styles                                                            */
/*********************************************************************************/

	ul.contact
	{
		margin: 0;
		padding: 2em 0em 0em 0em;
		list-style: none;
	}
	
	ul.contact li
	{
		display: inline-block;
		padding: 0em 0.30em;
		font-size: 1em;
	}
	
	ul.contact li span
	{
		display: none;
		margin: 0;
		padding: 0;
	}
	
	ul.contact li a
	{
		color: #FFF;
	}
	
	ul.contact li a:before
	{
		display: inline-block;
		background: #3f3f3f;
		width: 40px;
		height: 40px;
		line-height: 40px;
		border-radius: 20px;
		text-align: center;
		color: #FFFFFF;
	}
	

/*********************************************************************************/
/* Button Style                                                                  */
/*********************************************************************************/

	.button
	{
		display: inline-block;
		padding: 1em 3em 1em 2em;
		letter-spacing: 0.20em;
		text-decoration: none;
		text-transform: uppercase;
		font-weight: 400;
		font-size: 0.90em;
		color: #FFF;
	}
	
	.button:before
	{
		display: inline-block;
		background: #FFC31F;
		margin-right: 1em;
		width: 40px;
		height: 40px;
		line-height: 40px;
		border-radius: 20px;
		text-align: center;
		color: #272925;
	}
		
/*********************************************************************************/
/* 4-column                                                                      */
/*********************************************************************************/

	.box1,
	.box2,
	.box3,
	.box4
	{
		width: 235px;
	}
	
	.box1,
	.box2,
	.box3,
	{
		float: left;
		margin-right: 20px;
	}
	
	.box4
	{
		float: right;
	}
	
/*********************************************************************************/
/* 3-column                                                                      */
/*********************************************************************************/

	.boxA,
	.boxB,
	.boxC
	{
		width: 320px;
	}

	.boxA,
	.boxB,
	{
		float: left;
		margin-right: 20px;
	}
	
	.boxC
	{
		float: right;
	}
/* ... */

